fix(TextArea): Remove rogue z-index
This z-index would cause the label to display above an open Select.

--- a/packages/css-framework/src/components/_textarea.scss
+++ b/packages/css-framework/src/components/_textarea.scss
@@ -36,10 +36,8 @@
   box-shadow: 0 0 0 1px f.color("success", "700");
 }
 
-
 .rn-textarea__label {
   display: block;
-  z-index: 1;
   position: absolute;
   padding-top: 6px;
   padding-left: f.spacing("6");
